--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,40 @@
     <title>Title</title>
 </head>
 <body>
-Start page
+Start Page
+<form action="/" method="post">
+    <input type="text" name="vacancyName" placeholder="Введите название вакансии" required>
+    <button type="submit">Поиск</button>
+</form>
+<form>
+    <p th:if="${vacancyList == null or vacancyList.isEmpty()}">
+        No items available
+    </p>
+    <ul th:if="${vacancyList != null and not vacancyList.isEmpty()}">
+        <table>
+            <thead>
+            <tr>
+                <th>Название вакансии</th>
+                <th>Ссылка</th>
+            </thead>
+            <tbody>
+            <tr th:each="vacancy : ${vacancyList}">
+                <td th:text="${vacancy.name}"></td>
+                <td>
+                    <a th:href="${vacancy.alternateUrl}" th:text="'Ссылка на вакансию'"></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </ul>
+    <!--    <div>-->
+    <!--        <span th:if="${currentPage > 1}">-->
+    <!--            <a th:href="@{vacancies(page=${currentPage - 1})}"> Назад</a>-->
+    <!--        </span>-->
+    <!--        <span>-->
+    <!--            <a th:href="@{vacancies(page=${currentPage + 1})}"> Вперёд</a>-->
+    <!--        </span>-->
+    <!--    </div>-->
+</form>
 </body>
 </html>
