--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,6 +22,7 @@
                 <tr>
                     <th>Название вакансии</th>
                     <th>Опыт</th>
+                    <th>Ключевое слово</th>
                     <th>Ссылка</th>
                 </tr>
                 </thead>
@@ -29,6 +30,7 @@
                 <tr th:each="vacancy : ${vacancyList}">
                     <td th:text="${vacancy.name}"></td>
                     <td th:text="${vacancy.experience}"></td>
+                    <td th:text="${vacancy.keyword}"></td>
                     <td>
                         <a th:href="${vacancy.alternateUrl}" th:text="'Ссылка на вакансию'"></a>
                     </td>
