--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,11 +5,16 @@
     <title>Title</title>
 </head>
     <body>
-    <form action="/" method="post">
-        <label>
+    <form action="/" method="post" style="display: flex; align-items: center;">
+        <label style="margin-right: 10px;">
             <input type="text" name="keyword" placeholder="Введите название вакансии" required>
         </label>
         <button type="submit">Поиск</button>
+
+        <div style="margin-left: 20px;">
+            <h2 style="display: inline;">Общее количество вакансий:</h2>
+            <p style="display: inline;" th:text="${totalVacancy}"></p>
+        </div>
     </form>
 
     <div>
@@ -38,6 +43,9 @@
                 </tbody>
             </table>
         </ul>
+    </div>
+    <div style="margin-left: 500px;">
+        <p style="display: inline;" th:text="${totalVacancy/20}"></p>
     </div>
     </body>
 </html>
